// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReceiveFunds should not render qrcode without an address 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 dGbEyf absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-2xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="Button__StyledButton-mdtvtf-0 fHYGyx w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Receive Funds
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text whitespace-pre-line"
          >
            Enter the amount you wish to transfer to this address and confirm
          </div>
          <div
            data-testid="ReceiveFunds__address"
          >
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 ilSsHd undefined no-ligatures"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  Address
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="inline-flex items-center no-ligatures"
                    />
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <div
                        class="inline-block cursor-pointer"
                        data-testid="clipboard__wrapper"
                      >
                        <div
                          class="sc-bdfBwQ fPrsah"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="-space-x-2 whitespace-nowrap"
              >
                <div
                  aria-label="ARK Devnet"
                  class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
                  data-testid="NetworkIcon-ARK-ark.devnet"
                >
                  <div
                    class="sc-bdfBwQ iyevwF"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt=""
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"70\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV mt-8 w-full"
              data-testid="ReceiveFunds__toggle"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Specify amount
              </div>
            </button>
          </div>
          <div
            class="mx-auto mt-8 w-64 h-64"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFunds should render with a wallet name 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 dGbEyf absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-2xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="Button__StyledButton-mdtvtf-0 fHYGyx w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Receive Funds
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text whitespace-pre-line"
          >
            Enter the amount you wish to transfer to this address and confirm
          </div>
          <div
            data-testid="ReceiveFunds__name"
          >
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 ilSsHd undefined no-ligatures"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  Name
                </div>
                <div
                  class="font-semibold"
                >
                  My Wallet
                </div>
              </div>
              <div
                aria-label="ARK Devnet"
                class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
                data-testid="NetworkIcon-ARK-ark.devnet"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="ReceiveFunds__address"
          >
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 ilSsHd undefined no-ligatures"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  Address
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="inline-flex items-center no-ligatures"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        abc
                      </span>
                    </div>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <div
                        class="inline-block cursor-pointer"
                        data-testid="clipboard__wrapper"
                      >
                        <div
                          class="sc-bdfBwQ fPrsah"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="-space-x-2 whitespace-nowrap"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="abc"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                      title="abc"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV mt-8 w-full"
              data-testid="ReceiveFunds__toggle"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Specify amount
              </div>
            </button>
          </div>
          <div
            class="mx-auto mt-8 w-64 h-64"
          >
            <img
              alt="QR Code"
              class="p-3 w-64 h-64 rounded-lg border border-theme-secondary-300 dark:border-theme-secondary-800"
              data-testid="ReceiveFunds__qrcode"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAAD6CAYAAACI7Fo9AAAAAklEQVR4AewaftIAAAUzSURBVO3BQYpYtwJE0euiN5JAxhJo/0sQSBvJJGTsv4F86Ad+uF2+53z7+59/v6MfZo3JE/senlhj8pZ9D0+sMXnTvgf9GEFSvSCpXpBUL0iqFyTVC5LqBUn1gqR6QVK9IKlekFTvg4fWmPxO9j38LtaYPLHv4Yk1Jm9aY/I72ffwWUFSvSCpXpBUL0iqFyTVC5LqBUn1gqR6QVK9IKlekFTvg5fte/hK1pjov+17eGKNya9s38NXssbkLUFSvSCpXpBUL0iqFyTVC5LqBUn1gqR6QVK9IKlekFTvA/1Ua0zetO/hs9aYqFOQVC9Iqhck1QuS6gVJ9YKkekFSvSCpXpBUL0iqFyTV+0A/1b6HJ9aYvGXfw5vWmOjnCJLqBUn1gqR6QVK9IKlekFQvSKoXJNULkuoFSfWCpHofvGyNif6/NSZvWmOi/7bG5HcRJNULkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9T54aN+Dfpx9D0+sMXli38NnrTF5Yt/DE2tM3rTvQf8tSKoXJNULkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6n3748+/viOpWpBUL0iqFyTVC5LqBUn1gqR6QVK9IKlekFQvSKoXJNX72PfwxBqTN+170P+3xuSJfQ9vWWPyxL6HJ9aYvGnfwxNrTJ7Y9/BVBEn1gqR6QVK9IKlekFQvSKoXJNULkuoFSfWCpHpBUr0PXrbv4StZY/KmfQ9v2vfwxBqTz9r38MS+B/08a0w+K0iqFyTVC5LqBUn1gqR6QVK9IKlekFQvSKoXJNULkup9+/uff7+jH2aNya9q38Ob1pi8ad/DE2tMntj38MQakyf2PbwlSKoXJNULkuoFSfWCpHpBUr0gqV6QVC9Iqhck1fv2x59/fecL2ffwlawxedO+hzetMXnLvodf2RqTN+17eNMak88KkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9YKket/++POv7zyw7+GJNSZP7Ht40xqTJ/Y9PLHG5E37Hp5YY/JZ+x7046wxeWLfw1uCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9YKkekFSvSCp3rc//vzrO/pp9j08scbkiX0Pn7XG5Il9D1/JGpMn9j08scbkTfsenlhj8llBUr0gqV6QVC9Iqhck1QuS6gVJ9YKkekFSvSCpXpBU72Pfg36cNSZfyRqTz9r38MQak9/Jvocn1pg8scbkLUFSvSCpXpBUL0iqFyTVC5LqBUn1gqR6QVK9IKlekFTvg4fWmPxO9j18Jfsenlhj8llrTL6SfQ9PrDF5Yo3Jm/Y9vGmNyWcFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9YKkekFSvQ9etu/hK1lj8itbY/Kr2vfwpn0PT6wxedMakyf2PTyx7+GzgqR6QVK9IKlekFQvSKoXJNULkuoFSfWCpHpBUr0gqd4H+qXse3jLGpMn9j18JWtM3rTv4Yk1Jk+sMXlLkFQvSKoXJNULkuoFSfWCpHpBUr0gqV6QVC9Iqhck1ftAP9Uakyf2Pbxl38NXssbkTfsevpJ9D28JkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9YKkeh+8bI2Jfpw1Jm/Z9/CmNSZv2vfwxBqTJ/Y9PLHv4asIkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9YKket/+/uff7+iHWWPyxL6HJ9aYfBX7Ht60xuSJfQ9vWmPyqwqS6gVJ9YKkekFSvSCpXpBUL0iqFyTVC5LqBUn1/ge2xe/bjoQVUAAAAABJRU5ErkJggg=="
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFunds should render without a wallet name 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 dGbEyf absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-2xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="Button__StyledButton-mdtvtf-0 fHYGyx w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Receive Funds
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text whitespace-pre-line"
          >
            Enter the amount you wish to transfer to this address and confirm
          </div>
          <div
            data-testid="ReceiveFunds__address"
          >
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 ilSsHd undefined no-ligatures"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  Address
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="inline-flex items-center no-ligatures"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        abc
                      </span>
                    </div>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <div
                        class="inline-block cursor-pointer"
                        data-testid="clipboard__wrapper"
                      >
                        <div
                          class="sc-bdfBwQ fPrsah"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="-space-x-2 whitespace-nowrap"
              >
                <div
                  aria-label="ARK Devnet"
                  class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
                  data-testid="NetworkIcon-ARK-ark.devnet"
                >
                  <div
                    class="sc-bdfBwQ iyevwF"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="abc"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                      title="abc"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV mt-8 w-full"
              data-testid="ReceiveFunds__toggle"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Specify amount
              </div>
            </button>
          </div>
          <div
            class="mx-auto mt-8 w-64 h-64"
          >
            <img
              alt="QR Code"
              class="p-3 w-64 h-64 rounded-lg border border-theme-secondary-300 dark:border-theme-secondary-800"
              data-testid="ReceiveFunds__qrcode"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAAD6CAYAAACI7Fo9AAAAAklEQVR4AewaftIAAAUzSURBVO3BQYpYtwJE0euiN5JAxhJo/0sQSBvJJGTsv4F86Ad+uF2+53z7+59/v6MfZo3JE/senlhj8pZ9D0+sMXnTvgf9GEFSvSCpXpBUL0iqFyTVC5LqBUn1gqR6QVK9IKlekFTvg4fWmPxO9j38LtaYPLHv4Yk1Jm9aY/I72ffwWUFSvSCpXpBUL0iqFyTVC5LqBUn1gqR6QVK9IKlekFTvg5fte/hK1pjov+17eGKNya9s38NXssbkLUFSvSCpXpBUL0iqFyTVC5LqBUn1gqR6QVK9IKlekFTvA/1Ua0zetO/hs9aYqFOQVC9Iqhck1QuS6gVJ9YKkekFSvSCpXpBUL0iqFyTV+0A/1b6HJ9aYvGXfw5vWmOjnCJLqBUn1gqR6QVK9IKlekFQvSKoXJNULkuoFSfWCpHofvGyNif6/NSZvWmOi/7bG5HcRJNULkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9T54aN+Dfpx9D0+sMXli38NnrTF5Yt/DE2tM3rTvQf8tSKoXJNULkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6n3748+/viOpWpBUL0iqFyTVC5LqBUn1gqR6QVK9IKlekFQvSKoXJNX72PfwxBqTN+170P+3xuSJfQ9vWWPyxL6HJ9aYvGnfwxNrTJ7Y9/BVBEn1gqR6QVK9IKlekFQvSKoXJNULkuoFSfWCpHpBUr0PXrbv4StZY/KmfQ9v2vfwxBqTz9r38MS+B/08a0w+K0iqFyTVC5LqBUn1gqR6QVK9IKlekFQvSKoXJNULkup9+/uff7+jH2aNya9q38Ob1pi8ad/DE2tMntj38MQakyf2PbwlSKoXJNULkuoFSfWCpHpBUr0gqV6QVC9Iqhck1fv2x59/fecL2ffwlawxedO+hzetMXnLvodf2RqTN+17eNMak88KkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9YKket/++POv7zyw7+GJNSZP7Ht40xqTJ/Y9PLHG5E37Hp5YY/JZ+x7046wxeWLfw1uCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9YKkekFSvSCp3rc//vzrO/pp9j08scbkiX0Pn7XG5Il9D1/JGpMn9j08scbkTfsenlhj8llBUr0gqV6QVC9Iqhck1QuS6gVJ9YKkekFSvSCpXpBU72Pfg36cNSZfyRqTz9r38MQak9/Jvocn1pg8scbkLUFSvSCpXpBUL0iqFyTVC5LqBUn1gqR6QVK9IKlekFTvg4fWmPxO9j18Jfsenlhj8llrTL6SfQ9PrDF5Yo3Jm/Y9vGmNyWcFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9YKkekFSvQ9etu/hK1lj8itbY/Kr2vfwpn0PT6wxedMakyf2PTyx7+GzgqR6QVK9IKlekFQvSKoXJNULkuoFSfWCpHpBUr0gqd4H+qXse3jLGpMn9j18JWtM3rTv4Yk1Jk+sMXlLkFQvSKoXJNULkuoFSfWCpHpBUr0gqV6QVC9Iqhck1ftAP9Uakyf2Pbxl38NXssbkTfsevpJ9D28JkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9YKkeh+8bI2Jfpw1Jm/Z9/CmNSZv2vfwxBqTJ/Y9PLHv4asIkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9YKket/+/uff7+iHWWPyxL6HJ9aYfBX7Ht60xuSJfQ9vWmPyqwqS6gVJ9YKkekFSvSCpXpBUL0iqFyTVC5LqBUn1/ge2xe/bjoQVUAAAAABJRU5ErkJggg=="
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
